# brain2vision-nsd-color

./: .gitignore  DATA_TERMS.md  LICENSE  README.md  REPORT.md  download_data.py  pyproject.toml  requirements.txt  smoke_test.py
brain2vision/: __init__.py  bboxes.py  clip_targets.py  color_decode.py  color_shared_subject.py  color_targets.py  compare_rois.py  inspect_rois.py  luminance_targets.py  raw_nsd.py  replicate_subjects.py  roi.py  visualize.py
docs/: methods.md
