[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain2vision-nsd"
version = "0.1.0"
description = "ROI-selective NSD brain-to-vision utilities and color-decoding experiments"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nina" }]
keywords = ["fMRI", "NSD", "brain-decoding", "CLIP", "neuroscience"]

# Core deps needed to load ROIs and build targets.
dependencies = [
    "numpy>=1.24",
    "h5py>=3.8",
    "huggingface_hub>=0.23",
    "requests>=2.28",
    "pandas>=2.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
# CLIP embedding targets
clip = ["open_clip_torch>=2.24", "torch>=2.0"]
# color decoding experiments (ridge/MLP + shared-subject model + plots)
color = ["scikit-learn>=1.3", "matplotlib>=3.7", "torch>=2.0"]
# raw-NSD fine-grained ROIs
rawnsd = ["nibabel>=5.0"]
# everything
all = [
    "open_clip_torch>=2.24", "torch>=2.0", "scikit-learn>=1.3",
    "matplotlib>=3.7", "nibabel>=5.0",
]

[project.urls]
Homepage = "https://github.com/your-username/brain2vision-nsd"

[tool.setuptools.packages.find]
include = ["brain2vision*"]
